# xvc-rs

./: .codespellrc  .pre-commit-config.yaml  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml  release.yml
xvc-client/: Cargo.toml  README.md
xvc-client/examples/: sample_client.rs
xvc-client/src/: lib.rs
xvc-protocol/: Cargo.toml  README.md
xvc-protocol/benches/: message_encoding.rs
xvc-protocol/src/: codec.rs  error.rs  lib.rs  protocol.rs  rw.rs  tokio_codec.rs
xvc-server/: Cargo.toml  README.md
xvc-server-debugbridge/: Cargo.toml  README.md
xvc-server-debugbridge/src/: main.rs
xvc-server-debugbridge/src/backends/: devmem.rs  kernel_driver.rs  memory_mapped.rs  mod.rs  uio.rs
xvc-server-ftdi/: Cargo.toml  README.md
xvc-server-ftdi/src/: ftdi_device.rs  ftdi_server.rs  main.rs
xvc-server-usb/: Cargo.toml  README.md
xvc-server-usb/src/: disambiguation.rs  ftdi_device.rs  ftdi_server.rs
xvc-server/examples/: mock_server.rs
xvc-server/src/: lib.rs  server.rs
xvc-tests/: Cargo.toml
xvc-tests/src/: lib.rs
xvc-tests/tests/: get_info.rs  shift.rs  single_client.rs
