[workspace]
members = [
    "xvc-client",
    "xvc-protocol",
    "xvc-server",
    "xvc-server-debugbridge",
    "xvc-tests",
]
default-members = [
    "xvc-client",
    "xvc-protocol",
    "xvc-server",
    "xvc-server-debugbridge",
    "xvc-tests",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Lukas Scheller"]
license = "MIT"
rust-version = "1.91"
repository = "https://github.com/Schottkyc137/xvc-rs"
