[package]
name = "xvc-client"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories = ["api-bindings"]
description = "Library for connecting to Xilinx Virtual Cable (XVC) servers and performing remote JTAG operations"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["net", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
xvc-protocol = { version = "0.2.0", path = "../xvc-protocol", features = ["tokio"] }
