[package]
name = "xvc-protocol"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories = ["api-bindings"]
description = "Implementation of the Xilinx Virtual Cable (XVC) 1.0 protocol for JTAG communication with FPGA devices over network connections"

[features]
tokio = ["dep:tokio-util", "dep:bytes"]

[dependencies]
bytes = { version = "1", optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "message_encoding"
harness = false
