[package]
name = "xvc-server-debugbridge"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["command-line-utilities"]
description = "Backend implementations of the XVC (Xilinx Virtual Cable) server for AMD Debug Bridges"

[dependencies]
log = "0.4.28"
clap = { version = "4.5.52", features = ["derive"] }
env_logger = "0.11.5"
nix = { version = "0.30.1", features = [
    "uio",
    "mman",
    "ioctl",
] }
xvc-protocol = { version = "0.1.0", path = "../xvc-protocol" }
xvc-server = { version = "0.1.0", path = "../xvc-server" }

[[bin]]
name = "xvc-bridge"
path = "src/main.rs"
