[package]
name = "xvc-server-ftdi"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
log = "0.4.28"
clap = { version = "4.5.52", features = ["derive"] }
env_logger = "0.11.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7"
xvc-protocol = { version = "0.2.0", path = "../xvc-protocol" }
xvc-server = { version = "0.2.0", path = "../xvc-server" }
rusb = { version = "0.9.4", features = ["vendored"] }
ftdi-mpsse = "0.1.2"
inquire = "0.9.4"

[[bin]]
name = "xvc-usb"
path = "src/main.rs"
