[package]
name = "xvc-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories = ["api-bindings"]
description = "Library for implementing Xilinx Virtual Cable (XVC) servers that handle JTAG communication with FPGA devices over network connections"

[dependencies]
log = "0.4.28"
xvc-protocol = { version = "0.1.0", path = "../xvc-protocol" }
